# lecture-continuous-integration

./: README.md
apps/: .gitlab-ci.yml  docker-compose.yml
apps/listener/: CMakeLists.txt  Dockerfile  package.xml
apps/talker/: CMakeLists.txt  Dockerfile  package.xml
docker/gitlab/: Readme.md  docker-compose.yml
docker/sshmachine/: Dockerfile  README.md
docker/sshmachine/.ssh/: id_rsa
docker/sshmachine/files/: sshmachine_motd
docker/studentmachine/: Dockerfile  Readme.md  docker-compose.yml  generate-docker-compose-file.py
docker/studentmachine/.ssh/: id_rsa.pub
docker/studentmachine/ansible/: ansible.cfg
docker/studentmachine/ansible/group_vars/: all
docker/studentmachine/ansible/inventory/: studentlab
docker/studentmachine/ansible/playbooks/: example-playbook.yml
docker/studentmachine/ansible/roles/example-role/files/: testfile.sh
docker/studentmachine/ansible/roles/example-role/tasks/: main.yml
docker/studentmachine/files/: studentmachine_motd
docker/studentmachine/solutions/ansible/group_vars/: all
docker/studentmachine/solutions/ansible/inventory/: sitlecture
docker/studentmachine/solutions/ansible/playbooks/: lecture-playbook.yaml
docker/studentmachine/solutions/ansible/roles/message-of-the-day/tasks/: main.yml
docker/studentmachine/solutions/ansible/roles/message-of-the-day/templates/: motd.j2
docker/studentmachine/solutions/ci-cd/: .gitlab-ci.yml  docker-compose.yml
docker/studentmachine/solutions/ci-cd/listener/: Dockerfile
docker/studentmachine/solutions/ci-cd/talker/: Dockerfile
lecture/: Workshop_Handout.md
